--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,268 @@
-.App {
-  text-align: center;
+.flexRow{
+  display: flex;
+  flex-direction: row;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexColumn{
   display: flex;
   flex-direction: column;
-  align-items: center;
+}
+
+.customCard{
+  display: flex;
+  flex-direction: column;
+  max-width: 246px;
+  border-radius: 8px;
+  background-color: #fff;
+  margin-left:30px;
+  padding: 16px;
+}
+
+.customCard:hover{
+  box-shadow: 0px 0px 4px rgba(0, 1, 38, 0.25);
+}
+
+.imageContainer{
+  width: 214px;
+  height: 250px;
+}
+
+.content{
+  margin-top: 12px;
+  width: 214px;
+  height: 64px;
+  display: flex;
+  flex-direction: column;
+}
+
+.text_12_600_676773{
+  font-size: 12px;
+  font-weight: 600;
+  color: #676773;
+  line-height: 16px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_14_400_000126{
+  font-size: 14px;
+  font-weight: 400;
+  color: #000126;
+  line-height: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_14_600_333340{
+  font-size: 14px;
+  font-weight: 600;
+  color: #333340;
+  line-height: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_14_400_676773{
+  font-size: 14px;
+  font-weight: 400;
+  color: #676773;
+  line-height: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_14_600_000126{
+  font-size: 14px;
+  font-weight: 600;
+  color: #000126;
+  line-height: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_14_600_ffffff{
+  font-size: 14px;
+  font-weight: 600;
+  color: #ffffff;
+  line-height: 20px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_16_400_000126{
+  font-size: 16px;
+  font-weight: 400;
+  color: #000126;
+  line-height: 24px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.text_20_700_000126{
+  font-size: 20px;
+  font-weight: 700;
+  color: #000126;
+  line-height: 28px;
+  font-family: 'Nunito', sans-serif;
+}
+
+.productModal{
+  display: flex !important;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.modal-dialog{
+  position: absolute;
+  margin: 0px;
+  top:10%;
+  max-width: 1100px !important;
+  border:none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.modal-content{
+  border-radius: 12px;
+  height: 700px;
+  width: 1100px;
+  border:none;
+  padding: 20px 0px 12px 0px;
 }
+
+.inputContainer{
+  margin-top: 8px;
+  position: relative;
+}
+
+.enterInput{
+  border: 1px solid #D4D4D4;
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 16px;
+}
+
+.dropIcon{
+  height: 6px;
+  position: absolute;
+  top: 17px;
+  right: 16px;
+}
+
+.attachIcon{
+  height: 20px;
+  position: absolute;
+  top: 10px;
+  right: 16px;
+}
+
+.whiteBtn{
+  background: #fff;
+  border: solid 1px #d4d4d4;
+  border-radius: 4px;
+  padding: 10px 16px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.greyBtn{
+  background: #d4d4d4;
+  border: solid 1px #d4d4d4;
+  border-radius: 4px;
+  padding: 10px 16px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+.blueBtn{
+  background: #0067e2;
+  border: solid 1px #0067e2;
+  border-radius: 4px;
+  padding: 10px 16px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+}
+
+#file{
+  display: none;
+}
+
+select {
+  /* for Firefox */
+  -moz-appearance: none;
+  /* for Chrome */
+  -webkit-appearance: none;
+}
+
+.warning{
+  background: #FFFEE6;
+  border: 1px solid rgba(0, 1, 38, 0.1);
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  padding: 0px 16px;
+  height: 40px;
+}
+
+.fileContainer{
+  background: #FFFEE6;
+  border: 1px solid rgba(0, 1, 38, 0.1);
+  box-sizing: border-box;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  padding: 0px 16px;
+  height: 40px;
+  background-color: #f2f2f2;
+  width: 60%;
+  position: relative;
+}
+
+.dropdown { 
+  position: relative; 
+  display: inline-block; 
+  border: 1px solid #D4D4D4;
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  box-sizing: border-box;
+  padding-left: 16px;
+} 
+
+.dropdown:hover .dropdown-content { 
+  display: block; 
+} 
+
+.dropbtn { 
+  background-color: #fff; 
+  color: black; 
+  padding: 0px; 
+  font-size: 14px; 
+  border: none; 
+  cursor: pointer; 
+  position: absolute;
+  top: 7px;
+  left: 14px;
+}
+
+.dropdown-content { 
+  display: none; 
+  width: 100%;
+  position: absolute; 
+  left: 0px;
+  top: 40px;
+  background-color: #fff; 
+  min-width: 160px; 
+  box-shadow: 0px 8px 16px  
+      0px rgba(0, 0, 0, 0.2); 
+  z-index: 1; 
+  border-radius: 4px;
+} 
+
+.dropdown-content div { 
+  color: black; 
+  padding: 12px 16px; 
+  text-decoration: none; 
+  display: block; 
+} 
+
+.dropdown-content div:hover { 
+  background-color: #f2f2f2;
+  cursor: pointer;
+} 
